--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "odds/themes/jane"]
-	path = odds/themes/jane
+[submodule "themes/jane"]
+	path = themes/jane
 	url = https://github.com/xianmin/hugo-theme-jane.git
