--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # If you want to see the full configuration, please check `full-config.toml` .
 # And see https://gohugo.io/getting-started/configuration/ .
 
-baseURL = "http://localhost:1313/"
+baseURL = "https://odds.xword.club"
 title = "kraftyscrabble's Odds Site"
 enableRobotsTXT = true
 enableEmoji = true
