--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   branch: main # Branch to update (optional; defaults to master)
   repo: domino14/odds-site
-  base_url: https://odds.xword.club
+  base_url: https://api.netlify.com
 
 # publish_mode: editorial_workflow
 media_folder: "static/images/uploads"
