--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../themes/jane/assets/*"
+    "../../../Library/Caches/hugo_cache/modules/filecache/modules/pkg/mod/github.com/domino14/hugo-theme-jane@v0.0.0-20240814022957-fb9d51336f37/assets/*"
    ]
   }
  }
