--- a/config.toml
+++ b/config.toml
@@ -6,70 +6,72 @@ baseURL = "https://goldcoast.xword.club"
 title = "The Gold Coast Scrabble Club website"
 enableRobotsTXT = true
 enableEmoji = true
-theme = "jane"
+theme = "github.com/domino14/hugo-theme-jane"
 
-hasCJKLanguage = false     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
-paginate = 3              # Number of articles displayed on the homepage  # 首页每页显示的文章数
-rssLimit = 20             # Limit Entry Count to Rss file # 限制 Rss 文章输出数量
-disqusShortname = ""      # disqus_shortname
-googleAnalytics = ""      # UA-XXXXXXXX-X
-copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
+hasCJKLanguage = false # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
+paginate = 3           # Number of articles displayed on the homepage  # 首页每页显示的文章数
+rssLimit = 20          # Limit Entry Count to Rss file # 限制 Rss 文章输出数量
+disqusShortname = ""   # disqus_shortname
+googleAnalytics = ""   # UA-XXXXXXXX-X
+copyright = ""         # default: author.name ↓        # 默认为下面配置的author.name ↓
 
 # language support # en / zh-cn / other... translations present in i18n/
-defaultContentLanguage = "en"           # Default language to use
+defaultContentLanguage = "en" # Default language to use
 [languages.en]
-  languageCode = "en"
+languageCode = "en"
 
 [author]
-  name = "cesar"        # essential                     # 必需
-  url = "/about"          # optional                      # 可选
+name = "cesar" # essential                     # 必需
+url = "/about" # optional                      # 可选
 
-[sitemap]                 # essential                     # 必需
-  changefreq = "weekly"
-  priority = 0.5
-  filename = "sitemap.xml"
+[sitemap] # essential                     # 必需
+changefreq = "weekly"
+priority = 0.5
+filename = "sitemap.xml"
 
-[[menu.main]]             # config your menu              # 配置目录
-  name = "Home"
-  weight = 10
-  identifier = "home"
-  pageref = "/"
+[[menu.main]] # config your menu              # 配置目录
+name = "Home"
+weight = 10
+identifier = "home"
+pageref = "/"
 [[menu.main]]
-  name = "Archives"
-  weight = 20
-  identifier = "archives"
-  pageref = "/post/"
+name = "Archives"
+weight = 20
+identifier = "archives"
+pageref = "/post/"
 [[menu.main]]
-  name = "Tags"
-  weight = 30
-  identifier = "tags"
-  pageref = "/tags/"
-
+name = "Tags"
+weight = 30
+identifier = "tags"
+pageref = "/tags/"
 
 
 [params]
-  since = "2024"            # Site creation time          # 站点建立时间
-  homeFullContent = true   # if false, show post summaries on home page. Otherwise show full content.
-  rssFullContent = true     # if false, Rss feed instead of the summary
+since = "2024"         # Site creation time          # 站点建立时间
+homeFullContent = true # if false, show post summaries on home page. Otherwise show full content.
+rssFullContent = true  # if false, Rss feed instead of the summary
 
-  # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = ""        # default: the title value    # 默认值: 上面设置的title值
-  keywords = ["Hugo", "theme","jane"]
-  description = "The Gold Coast Scrabble club website."
+# site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
+logoTitle = ""                                        # default: the title value    # 默认值: 上面设置的title值
+keywords = ["Hugo", "theme", "jane"]
+description = "The Gold Coast Scrabble club website."
 
-  # The date format to use; for a list of valid formats, see https://gohugo.io/functions/format/
-  dateFormatToUse = "2006-01-02"
+# The date format to use; for a list of valid formats, see https://gohugo.io/functions/format/
+dateFormatToUse = "2006-01-02"
 
-  # 一些全局开关，你也可以在每一篇内容的 front matter 中针对单篇内容关闭或开启某些功能，在 archetypes/default.md 查看更多信息。
-  # Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
-  toc = true                                                                            # 是否开启目录
-  photoswipe = true         # see https://github.com/dimsemenov/PhotoSwipe            # 是否启用PhotoSwipe（图片可点击）
+# 一些全局开关，你也可以在每一篇内容的 front matter 中针对单篇内容关闭或开启某些功能，在 archetypes/default.md 查看更多信息。
+# Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
+toc = true        # 是否开启目录
+photoswipe = true # see https://github.com/dimsemenov/PhotoSwipe            # 是否启用PhotoSwipe（图片可点击）
 
-  # Link custom CSS and JS assets
-  #   (relative to /static/css and /static/js respectively)
-  customCSS = []            # if ['custom.css'], load '/static/css/custom.css' file
-  customJS = []             # if ['custom.js'], load '/static/js/custom.js' file
+# Link custom CSS and JS assets
+#   (relative to /static/css and /static/js respectively)
+customCSS = [] # if ['custom.css'], load '/static/css/custom.css' file
+customJS = []  # if ['custom.js'], load '/static/js/custom.js' file
 
-  [params.social]                                         # 社交链接
-    a-email = "mailto:delsolar+goldcoast@gmail.com"
+[params.social] # 社交链接
+a-email = "mailto:delsolar+goldcoast@gmail.com"
 
+[module]
+[[module.imports]]
+path = 'github.com/domino14/hugo-theme-jane'
